--- a/flower.html
+++ b/flower.html
@@ -59,6 +59,7 @@
                        <li><a href="#">Twitter</a></li>
                        <li><a href="#">Linkedin</a></li>
                        <li><a href="#">Instagram</a></li>
+                       <li><a href="#">Contact</a></li>
                   </ul>
                </div>
           </footer>
